--- a/src/components/Calculator/Calculator.css
+++ b/src/components/Calculator/Calculator.css
@@ -1,6 +1,6 @@
 button{
-    max-width: 50px;
-    max-height: 50px;
+    width: 50px;
+    height: 50px;
     font-size: 18px;
     padding: 10px 20px;
     margin: 1px;
@@ -28,4 +28,11 @@ button{
     justify-content: center;
     display:flex; 
     flex-direction:row;
+}
+
+.clear{
+    margin-top: 1px;
+    background-color: red;
+    width: 150px;
+    height: 50px;
 }
